--- a/app/src/main/res/layout/noti_customize.xml
+++ b/app/src/main/res/layout/noti_customize.xml
@@ -15,6 +15,7 @@
         android:src="@drawable/sasageyo" />
 
     <LinearLayout
+        android:id="@+id/notification_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
