--- a/app/src/main/res/layout/noti_customize.xml
+++ b/app/src/main/res/layout/noti_customize.xml
@@ -42,17 +42,17 @@
             android:layout_marginStart="10dp"
             android:ellipsize="end"
             android:maxLines="1"
-            android:textColor="@color/black"
             android:text="Artist Name"
+            android:textColor="@color/black"
             android:textSize="14sp" />
 
         <ProgressBar
-        android:id="@+id/notification_progress"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:max="100"
-        android:progress="50"
-        style="?android:attr/progressBarStyleHorizontal" />
+            android:id="@+id/notification_progress"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:max="100"
+            android:progress="50" />
 
     </LinearLayout>
 
