--- a/app/src/main/res/layout/noti_customize.xml
+++ b/app/src/main/res/layout/noti_customize.xml
@@ -46,6 +46,44 @@
             android:textColor="@color/black"
             android:textSize="14sp" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/volume_down_button"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:src="@drawable/baseline_volume_down_24" />
+
+            <ImageView
+                android:id="@+id/volume_up_button"
+                android:layout_marginLeft="10dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/baseline_volume_up_24" />
+
+            <ImageView
+                android:layout_marginLeft="10dp"
+                android:id="@+id/notification_play_pause"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_centerVertical="true"
+                android:contentDescription="Play/Pause"
+                android:src="@drawable/baseline_play_arrow_24" />
+            <ImageView
+                android:id="@+id/notification_skip"
+                android:layout_marginLeft="10dp"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:contentDescription="Skip"
+                android:src="@drawable/baseline_skip_next_24" />
+        </LinearLayout>
+
         <ProgressBar
             android:id="@+id/notification_progress"
             style="?android:attr/progressBarStyleHorizontal"
@@ -55,23 +93,4 @@
             android:progress="50" />
 
     </LinearLayout>
-
-    <ImageView
-        android:id="@+id/notification_skip"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
-        android:contentDescription="Skip"
-        android:src="@drawable/baseline_skip_next_24" />
-
-    <ImageView
-        android:id="@+id/notification_play_pause"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_centerVertical="true"
-        android:layout_toStartOf="@id/notification_skip"
-        android:contentDescription="Play/Pause"
-        android:src="@drawable/baseline_play_arrow_24" />
-
 </RelativeLayout>
